* de.po: Nico Schümann updated the following German translations 		libexo; xfburn; xfce4-panel and xfdesktop * fr.po: Updated the following French translations 		squeeze; xfce4-panel and xfdesktop
(Old svn revision: 25280)

--- a/po/de.po
+++ b/po/de.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-03 20:30+0100\n"
 "PO-Revision-Date: 2007-01-04 00:27+0100\n"
-"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
+"Last-Translator: Nico Schümann <nico@prog.nico22.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -411,81 +411,75 @@ msgid "New Item"
 msgstr "Neuer Eintrag"
 
 #: ../plugins/launcher/launcher-exec.c:485
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch \"%s\""
 msgstr "Konnte »%s« nicht ausführen."
 
 #: ../plugins/launcher/launcher-dialog.c:590
 msgid "No icon"
-msgstr ""
+msgstr "Kein Symbol"
 
 #: ../plugins/launcher/launcher-dialog.c:610
-#, fuzzy
 msgid "Select a Directory"
-msgstr "Monitor auswählen"
+msgstr "Ordner auswählen"
 
 #: ../plugins/launcher/launcher-dialog.c:654
-#, fuzzy
 msgid "Select an Application"
-msgstr "Aktion auswählen:"
+msgstr "Anwendung auswählen:"
 
 #: ../plugins/launcher/launcher-dialog.c:664
 msgid "All Files"
-msgstr ""
+msgstr "Alle Dateien"
 
 #: ../plugins/launcher/launcher-dialog.c:669
 msgid "Executable Files"
-msgstr ""
+msgstr "Ausführbare Dateien"
 
 #: ../plugins/launcher/launcher-dialog.c:684
 msgid "Perl Scripts"
-msgstr ""
+msgstr "Perl-Skripte"
 
 #: ../plugins/launcher/launcher-dialog.c:690
 msgid "Python Scripts"
-msgstr ""
+msgstr "Python-Skripte"
 
 #: ../plugins/launcher/launcher-dialog.c:696
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "Ruby-Skripte"
 
 #: ../plugins/launcher/launcher-dialog.c:702
 msgid "Shell Scripts"
-msgstr ""
+msgstr "Shell-Skripte"
 
 #: ../plugins/launcher/launcher-dialog.c:775
 msgid "Unknown"
-msgstr ""
+msgstr "Unbekannt"
 
 #. allocate the chooser dialog
 #: ../plugins/launcher/launcher-dialog.c:778
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr ""
+msgstr "Symbol für »%s« auswählen"
 
 #: ../plugins/launcher/launcher-dialog.c:1116
-#, fuzzy
 msgid "_Name"
-msgstr "Name"
+msgstr "_Name"
 
 #: ../plugins/launcher/launcher-dialog.c:1134
-#, fuzzy
 msgid "_Description"
-msgstr "Bezeichnung"
+msgstr "_Bezeichnung"
 
 #: ../plugins/launcher/launcher-dialog.c:1153
-#, fuzzy
 msgid "_Icon"
-msgstr "Icon-Box"
+msgstr "_Symbol"
 
 #: ../plugins/launcher/launcher-dialog.c:1171
-#, fuzzy
 msgid "Co_mmand"
-msgstr "Befehl"
+msgstr "Be_fehl"
 
 #: ../plugins/launcher/launcher-dialog.c:1198
 msgid "_Working Directory"
-msgstr ""
+msgstr "_Arbeitsverzeichnis"
 
 #: ../plugins/launcher/launcher-dialog.c:1230
 msgid "Run in _terminal"
@@ -566,9 +560,8 @@ msgid "Use flat buttons"
 msgstr "Flache Knöpfe verwenden"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:215
-#, fuzzy
 msgid "Show handle"
-msgstr "_Rahmen anzeigen"
+msgstr "Handle anzeigen"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:227
 msgid "Show tasks from _all workspaces"
@@ -675,7 +668,7 @@ msgstr "A_ktionen für die Arbeitsfläche anzeigen"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
-msgstr ""
+msgstr "Konnte »xfce4-panel -c« nicht ausführen"
 
 #: ../mcs-plugin/plugin.c:57
 msgid "Panel"
