--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-03 20:30+0100\n"
-"PO-Revision-Date: 2007-02-07 14:28+0100\n"
+"PO-Revision-Date: 2007-03-18 17:27+0100\n"
 "Last-Translator: Maximilian Schleiss <maxschleiss@bluewin.ch>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "Gestionnaire de fichiers"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr "Gérer les fichiers et répertoires"
+msgstr "Gérer des fichiers et dossiers"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
@@ -53,16 +53,15 @@ msgstr "Navigateur Web"
 #: ../libxfce4panel/xfce-panel-external-item.c:171
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr "Un élément a été inopinément supprimé: \"%s\"."
+msgstr "Un élément a été inopinément supprimé : \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:609
 #, c-format
 msgid "Remove \"%s\"?"
-msgstr "Supprimer \"%s\"?"
+msgstr "Supprimer \"%s\" ?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:623
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr "L'élément va être enlevé du panneau et sa configuration sera perdue."
 
 #. configure, hide by default
@@ -85,9 +84,10 @@ msgstr "Supprimer"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:904
 msgid "Add New Item"
-msgstr "Ajouter un nouvel élément"
+msgstr "Ajouter un élément"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:915 ../panel/panel.c:697
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:915
+#: ../panel/panel.c:697
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
 msgstr "Configurer le panneau"
@@ -96,8 +96,10 @@ msgstr "Configurer le panneau"
 msgid "Add Items"
 msgstr "Ajouter des éléments"
 
-#: ../panel/panel.c:724 ../plugins/actions/actions.c:280
-#: ../plugins/actions/actions.c:314 ../plugins/actions/actions.c:432
+#: ../panel/panel.c:724
+#: ../plugins/actions/actions.c:280
+#: ../plugins/actions/actions.c:314
+#: ../plugins/actions/actions.c:432
 msgid "Quit"
 msgstr "Quitter"
 
@@ -109,30 +111,32 @@ msgstr "Redémarrer"
 msgid "About the Xfce Panel"
 msgstr "À propos du panneau Xfce"
 
-#: ../panel/panel-app.c:238 ../panel/panel-app.c:876
+#: ../panel/panel-app.c:238
+#: ../panel/panel-app.c:876
 msgid "Exit Xfce Panel?"
-msgstr "Quitter le panneau Xfce?"
+msgstr "Quitter le panneau Xfce ?"
 
-#: ../panel/panel-app.c:874 ../panel/panel-app.c:906 ../panel/panel-app.c:940
+#: ../panel/panel-app.c:874
+#: ../panel/panel-app.c:906
+#: ../panel/panel-app.c:940
 msgid "Xfce Panel"
 msgstr "Panneau Xfce"
 
 #: ../panel/panel-app.c:877
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
-"Vous ne pouvez pas enlever le dernier panneau. Voulez-vous quitter le "
-"programme?"
+msgstr "Vous ne pouvez pas enlever le dernier panneau. Voulez-vous quitter le programme ?"
 
 #: ../panel/panel-app.c:904
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr "Supprimer le panneau \"%d\"?"
+msgstr "Supprimer le panneau \"%d\" ?"
 
 #: ../panel/panel-app.c:908
 msgid "The selected panel and all its items will be removed."
-msgstr "Le panneau choisi et tous ses élément seront supprimés."
+msgstr "Le panneau choisi et tous ses éléments seront supprimés."
 
-#: ../panel/panel-app.c:947 ../panel/panel-app.c:950
+#: ../panel/panel-app.c:947
+#: ../panel/panel-app.c:950
 msgid "Developer"
 msgstr "Développeur"
 
@@ -155,7 +159,7 @@ msgstr ""
 " Élément de l'environnement de bureau Xfce\n"
 " http://www.xfce.org\n"
 "\n"
-" Sous license GNU GPL.\n"
+" Sous licence GNU GPL.\n"
 "\n"
 
 #: ../panel/main.c:52
@@ -189,55 +193,58 @@ msgstr ""
 " -r, --restart   Redémarrer les panneaux\n"
 " -q, --quit      Fin de la session\n"
 " -x, --exit      Fermer tous les panneaux et terminer le programme\n"
-" -a, --add       Ajouter un nouvel élément\n"
+" -a, --add       Ajouter des éléments\n"
 "\n"
 
 #: ../panel/panel-dialogs.c:184
 #, c-format
 msgid "Could not open \"%s\" module"
-msgstr "Impossible de créer l'élément \"%s\" du panneau."
+msgstr "Impossible d'ouvrir le module \"%s\""
 
 #: ../panel/panel-dialogs.c:593
 msgid "Add Items to the Panel"
 msgstr "Ajouter des éléments au panneau"
 
 #: ../panel/panel-dialogs.c:623
-msgid ""
-"Drag items from the list to a panel or remove them by dragging them back to "
-"the list."
-msgstr ""
-"Faire glisser des éléments de la liste vers le panneau ou les supprimer en "
-"les glissant vers la liste."
+msgid "Drag items from the list to a panel or remove them by dragging them back to the list."
+msgstr "Faire glisser des éléments de la liste vers le panneau ou les enlever en les glissant vers la liste."
 
 #: ../panel/panel-dialogs.c:640
 msgid "Available Items"
 msgstr "Éléments disponibles"
 
-#: ../panel/panel-dialogs.c:866 ../panel/panel-dialogs.c:1090
+#: ../panel/panel-dialogs.c:866
+#: ../panel/panel-dialogs.c:1090
 msgid "Normal Width"
 msgstr "Largeur normale"
 
-#: ../panel/panel-dialogs.c:868 ../panel/panel-dialogs.c:1092
+#: ../panel/panel-dialogs.c:868
+#: ../panel/panel-dialogs.c:1092
 msgid "Full Width"
 msgstr "Pleine largeur"
 
-#: ../panel/panel-dialogs.c:874 ../panel/panel-dialogs.c:1098
+#: ../panel/panel-dialogs.c:874
+#: ../panel/panel-dialogs.c:1098
 msgid "Span Monitors"
 msgstr "Étendre à tous les moniteurs"
 
-#: ../panel/panel-dialogs.c:934 ../panel/panel-dialogs.c:1163
+#: ../panel/panel-dialogs.c:934
+#: ../panel/panel-dialogs.c:1163
 msgid "Left"
 msgstr "à gauche"
 
-#: ../panel/panel-dialogs.c:936 ../panel/panel-dialogs.c:1165
+#: ../panel/panel-dialogs.c:936
+#: ../panel/panel-dialogs.c:1165
 msgid "Right"
 msgstr "à droite"
 
-#: ../panel/panel-dialogs.c:941 ../panel/panel-dialogs.c:1170
+#: ../panel/panel-dialogs.c:941
+#: ../panel/panel-dialogs.c:1170
 msgid "Top"
 msgstr "en haut"
 
-#: ../panel/panel-dialogs.c:943 ../panel/panel-dialogs.c:1172
+#: ../panel/panel-dialogs.c:943
+#: ../panel/panel-dialogs.c:1172
 msgid "Bottom"
 msgstr "en bas"
 
@@ -272,18 +279,19 @@ msgstr "Vertical"
 
 #: ../panel/panel-dialogs.c:1147
 msgid "Handle:"
-msgstr "Position des poignées:"
+msgstr "Position des poignées :"
 
 #: ../panel/panel-dialogs.c:1159
 msgid "At both sides"
-msgstr "Sur les deux côtés"
+msgstr "Des deux côtés"
 
 #: ../panel/panel-dialogs.c:1232
 msgid "Select Monitor"
 msgstr "Sélectionner le moniteur"
 
 #. Button Layout
-#: ../panel/panel-dialogs.c:1350 ../plugins/clock/clock.c:496
+#: ../panel/panel-dialogs.c:1350
+#: ../plugins/clock/clock.c:496
 #: ../plugins/tasklist/tasklist-dialogs.c:183
 #: ../plugins/windowlist/windowlist-dialog.c:190
 msgid "Appearance"
@@ -302,7 +310,8 @@ msgstr "Transparence (%) :"
 msgid "Make active panel opaque"
 msgstr "Rendre opaque le panneau actif"
 
-#: ../panel/panel-dialogs.c:1452 ../panel/panel-dialogs.c:1488
+#: ../panel/panel-dialogs.c:1452
+#: ../panel/panel-dialogs.c:1488
 #: ../panel/panel-dialogs.c:1513
 #, c-format
 msgid "Panel %d"
@@ -321,7 +330,8 @@ msgstr "Nouveau panneau"
 msgid "Panel Manager"
 msgstr "Gestionnaire de panneau"
 
-#: ../plugins/actions/actions.c:261 ../plugins/actions/actions.c:297
+#: ../plugins/actions/actions.c:261
+#: ../plugins/actions/actions.c:297
 #: ../plugins/actions/actions.c:433
 msgid "Lock screen"
 msgstr "Verrouiller l'écran"
@@ -350,7 +360,8 @@ msgstr "Quitter + Verrouiller l'écran"
 msgid "%A %d %B %Y"
 msgstr "%A, %d %B %Y"
 
-#: ../plugins/clock/clock.c:481 ../plugins/clock/clock.desktop.in.in.h:1
+#: ../plugins/clock/clock.c:481
+#: ../plugins/clock/clock.desktop.in.in.h:1
 msgid "Clock"
 msgstr "Horloge"
 
@@ -367,7 +378,8 @@ msgstr "Numérique"
 msgid "LED"
 msgstr "LED"
 
-#: ../plugins/clock/clock.c:515 ../plugins/systray/systray.c:402
+#: ../plugins/clock/clock.c:515
+#: ../plugins/systray/systray.c:402
 msgid "Show _frame"
 msgstr "Afficher _cadre"
 
@@ -400,92 +412,88 @@ msgstr "Afficher seulement les applications minimisées"
 msgid "Show applications of all workspaces"
 msgstr "Afficher les applications de tous les espaces de travail"
 
-#: ../plugins/iconbox/iconbox.c:939 ../plugins/tasklist/tasklist-dialogs.c:202
+#: ../plugins/iconbox/iconbox.c:939
+#: ../plugins/tasklist/tasklist-dialogs.c:202
 msgid "Use all available space"
 msgstr "Utiliser l'espace disponible"
 
 #. create new menu item
 #. set some default values
-#: ../plugins/launcher/launcher.c:707 ../plugins/launcher/launcher.c:932
+#: ../plugins/launcher/launcher.c:707
+#: ../plugins/launcher/launcher.c:932
 msgid "New Item"
 msgstr "Nouvel élément"
 
 #: ../plugins/launcher/launcher-exec.c:485
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch \"%s\""
-msgstr "Impossible d'exécuter \"%s\"."
+msgstr "Échec au lancement de \"%s\""
 
 #: ../plugins/launcher/launcher-dialog.c:590
 msgid "No icon"
-msgstr ""
+msgstr "Pas d'icône"
 
 #: ../plugins/launcher/launcher-dialog.c:610
-#, fuzzy
 msgid "Select a Directory"
-msgstr "Sélectionner le moniteur"
+msgstr "Sélectionnez un répertoire"
 
 #: ../plugins/launcher/launcher-dialog.c:654
-#, fuzzy
 msgid "Select an Application"
-msgstr "Choisir le type d'action :"
+msgstr "Sélectionnez une application"
 
 #: ../plugins/launcher/launcher-dialog.c:664
 msgid "All Files"
-msgstr ""
+msgstr "Tous les fichiers"
 
 #: ../plugins/launcher/launcher-dialog.c:669
 msgid "Executable Files"
-msgstr ""
+msgstr "Fichiers exécutables"
 
 #: ../plugins/launcher/launcher-dialog.c:684
 msgid "Perl Scripts"
-msgstr ""
+msgstr "Scripts Perl"
 
 #: ../plugins/launcher/launcher-dialog.c:690
 msgid "Python Scripts"
-msgstr ""
+msgstr "Scripts Python"
 
 #: ../plugins/launcher/launcher-dialog.c:696
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "Scripts Ruby"
 
 #: ../plugins/launcher/launcher-dialog.c:702
 msgid "Shell Scripts"
-msgstr ""
+msgstr "Scripts Shell"
 
 #: ../plugins/launcher/launcher-dialog.c:775
 msgid "Unknown"
-msgstr ""
+msgstr "Inconnu"
 
 #. allocate the chooser dialog
 #: ../plugins/launcher/launcher-dialog.c:778
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr ""
+msgstr "Sélectionnez une icône pour \"%s\""
 
 #: ../plugins/launcher/launcher-dialog.c:1116
-#, fuzzy
 msgid "_Name"
-msgstr "Nom"
+msgstr "_Nom"
 
 #: ../plugins/launcher/launcher-dialog.c:1134
-#, fuzzy
 msgid "_Description"
-msgstr "Description"
+msgstr "_Description "
 
 #: ../plugins/launcher/launcher-dialog.c:1153
-#, fuzzy
 msgid "_Icon"
-msgstr "Boite à icônes"
+msgstr "_Icône"
 
 #: ../plugins/launcher/launcher-dialog.c:1171
-#, fuzzy
 msgid "Co_mmand"
-msgstr "Commande"
+msgstr "Co_mmande"
 
 #: ../plugins/launcher/launcher-dialog.c:1198
 msgid "_Working Directory"
-msgstr ""
+msgstr "_Répertoire de travail"
 
 #: ../plugins/launcher/launcher-dialog.c:1230
 msgid "Run in _terminal"
@@ -500,7 +508,8 @@ msgstr "Utiliser la _notification de démarrage"
 msgid "Program Launcher"
 msgstr "Lanceur de programme"
 
-#: ../plugins/pager/pager.c:336 ../plugins/pager/pager.desktop.in.in.h:2
+#: ../plugins/pager/pager.c:336
+#: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "Bureaux"
 
@@ -514,12 +523,12 @@ msgstr "Nombre de colonnes :"
 
 #: ../plugins/pager/pager.c:397
 msgid "Switch workspaces using the mouse wheel"
-msgstr "Changer d'espace de travail à l'aide de la molette de souris"
+msgstr "Changer d'espace de travail à l'aide de la roulette de la souris"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
 msgid "Separator or Spacing"
-msgstr "Séparation ou espaceur"
+msgstr "Séparation ou espacement"
 
 #: ../plugins/separator/separator.c:279
 msgid "_Draw Separator"
@@ -537,9 +546,10 @@ msgstr "Restaurer les fenêtres cachées"
 msgid "Hide windows and show desktop"
 msgstr "Cacher les fenêtres et afficher le bureau"
 
-#: ../plugins/systray/systray.c:69 ../plugins/systray/systray.c:84
+#: ../plugins/systray/systray.c:69
+#: ../plugins/systray/systray.c:84
 msgid "There is already a system tray running on this screen"
-msgstr "Il y a déjà une zone de notification système active pour cet écran"
+msgstr "Il y a déjà une zone de notification système active sur cet écran"
 
 #: ../plugins/systray/systray.c:90
 #, c-format
@@ -566,9 +576,8 @@ msgid "Use flat buttons"
 msgstr "Utiliser des boutons plats"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:215
-#, fuzzy
 msgid "Show handle"
-msgstr "Afficher _cadre"
+msgstr "Afficher la poignée"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:227
 msgid "Show tasks from _all workspaces"
@@ -583,7 +592,7 @@ msgstr "Afficher le _nom des applications"
 #. keep order in sync with NetkTasklistGroupingType
 #: ../plugins/tasklist/tasklist-dialogs.c:243
 msgid "Never group tasks"
-msgstr "Ne jamais regrouper les tâches"
+msgstr "Ne pas regrouper les tâches"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:244
 msgid "Automatically group tasks"
@@ -631,12 +640,8 @@ msgid "Window List"
 msgstr "Liste des fenêtres"
 
 #: ../plugins/windowlist/windowlist-dialog.c:150
-msgid ""
-"<i>Urgency notification</i> will blink the button when an application needs "
-"attention."
-msgstr ""
-"<i>Notification d'urgence</i> fera clignoter le bouton lorsqu'une "
-"application a besoin d'être suivie."
+msgid "<i>Urgency notification</i> will blink the button when an application needs attention."
+msgstr "<i>Notification d'urgence</i> fera clignoter le bouton lorsqu'une application a besoin d'être suivie."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:157
@@ -665,7 +670,7 @@ msgstr "Bouton _flèche"
 
 #: ../plugins/windowlist/windowlist-dialog.c:221
 msgid "Show _windows from all workspaces"
-msgstr "Afficher les _tâches de tous les espaces de travail"
+msgstr "Afficher les _fenêtres de tous les espaces de travail"
 
 #: ../plugins/windowlist/windowlist-dialog.c:230
 msgid "Show a_pplication icons"
@@ -677,7 +682,7 @@ msgstr "Afficher les ac_tions des espaces de travail"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
-msgstr ""
+msgstr "Échec au lancement de 'xfce4-panel -c'"
 
 #: ../mcs-plugin/plugin.c:57
 msgid "Panel"
@@ -697,7 +702,7 @@ msgstr "Quelle heure est-il ?"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
 msgid "Show icons of all running applications"
-msgstr "Montrer les icônes de toutes les applications en cours"
+msgstr "Afficher les icônes de toutes les applications en cours"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
 msgid "Launcher"
@@ -717,23 +722,23 @@ msgstr "Ajoute un espace ou une ligne entre les éléments du panneau"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr "Afficher bureau"
+msgstr "Afficher le bureau"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
-msgstr "Activer afficher/cacher bureau"
+msgstr "Activer afficher/cacher le bureau"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
 msgid "Show notification icons"
-msgstr "Montrer les icônes de notification"
+msgstr "Afficher les icônes de notification"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
 msgid "Show all running applications"
-msgstr "Montrer toutes les applications en cours"
+msgstr "Afficher toutes les applications en cours"
 
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:1
 msgid "Show list of available windows"
-msgstr "Montrer la liste des fenêtres disponibles"
+msgstr "Afficher la liste des fenêtres disponibles"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
@@ -741,68 +746,48 @@ msgstr "Gestionnaire du panneau Xfce 4"
 
 #~ msgid "Error in command \"%s\""
 #~ msgstr "Erreur dans la commande \"%s\""
-
 #~ msgid "This item has not yet been configured"
 #~ msgstr "Cet élément n'a pas encore été configuré"
-
 #~ msgid "Default"
 #~ msgstr "Par défaut"
-
 #~ msgid "File management"
 #~ msgstr "Gestion de fichiers"
-
 #~ msgid "Utilities"
 #~ msgstr "Utilitaires"
-
 #~ msgid "Games"
 #~ msgstr "Jeux"
-
 #~ msgid "Help browser"
 #~ msgstr "Navigateur d'aide"
-
 #~ msgid "Multimedia"
 #~ msgstr "Multimédia"
-
 #~ msgid "Network"
 #~ msgstr "Réseau"
-
 #~ msgid "Graphics"
 #~ msgstr "Graphiques"
-
 #~ msgid "Printer"
 #~ msgstr "Imprimante"
-
 #~ msgid "Productivity"
 #~ msgstr "Productivité"
-
 #~ msgid "Office"
 #~ msgstr "Bureautique"
-
 #~ msgid "Sound"
 #~ msgstr "Son"
-
 #~ msgid "Terminal"
 #~ msgstr "Terminal"
-
 #~ msgid "Development"
 #~ msgstr "Développement"
-
 #~ msgid "Select image file"
 #~ msgstr "Sélectionner une image"
-
 #~ msgid "Select command"
 #~ msgstr "Sélection de la commande"
-
 #~ msgid "Other..."
 #~ msgstr "Autre..."
-
 #~ msgid ""
 #~ "The first item in the list is shown on the panel. Additional items will "
 #~ "appear in a menu."
 #~ msgstr ""
 #~ "Le premier élément dans la liste est affiché sur le panneau. Les éléments "
 #~ "additionnels apparaîtront dans un menu."
-
 #~ msgid ""
 #~ "Failed to run 0launch:\n"
 #~ "%s\n"
@@ -813,7 +798,6 @@ msgstr "Gestionnaire du panneau Xfce 4"
 #~ "%s\n"
 #~ "\n"
 #~ "Allez à http://0install.net pour de l'aide à l'utilisation de Zero Install"
-
 #~ msgid ""
 #~ "The Zero Install GUI has finished, but the launcher dialog has "
 #~ "disappeared in the meantime. Not adding launcher (but any files "
@@ -821,15 +805,12 @@ msgstr "Gestionnaire du panneau Xfce 4"
 #~ msgstr ""
 #~ "Zero Install GUI a fini, entre-temps la fenêtre du lanceur a disparu. Le "
 #~ "lanceur n'est pas ajouté (les fichiers téléchargés ne sont pas perdus)."
-
 #~ msgid "Select file"
 #~ msgstr "Sélection de fichier"
-
 #~ msgid "Test Plugin"
 #~ msgstr "Tester le greffon"
-
 #~ msgid "This plugin has no purpose"
 #~ msgstr "Ce greffon n'a aucun but"
-
 #~ msgid "Size"
 #~ msgstr "Taille"
+
