Fixed minor issues in some German, Dutch and French translations.
	* en_GB: Added new and updated British English translations
	by Jeff Bailes <thepizzaking@gmail.com> 


(Old svn revision: 25285)

--- a/po/nl.po
+++ b/po/nl.po
@@ -700,7 +700,7 @@ msgstr "Voor _alle bureaubladen"
 
 #: ../plugins/windowlist/windowlist-dialog.c:193
 msgid "_Icon button"
-msgstr "Knop met pictogram"
+msgstr "_Knop met pictogram"
 
 #: ../plugins/windowlist/windowlist-dialog.c:200
 msgid "A_rrow button"
