--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* en_GB.po: Added the British English translation
+	by Jeff Bailes <thepizzaking@gmail.com>
+	* nl.po: Fixed accelerators in the Dutch translation
+
 2007-03-20  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Updated Finnish translation.
