--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-25  Daichi Kawahata <daichi@xfce.org>
+
+	* mk.po: Removed executable attribute.
+
 2007-03-24  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* de.po: Updated the German translation
@@ -5,8 +9,8 @@
 	* fr.po: Updated the French translation.
 
 2007-03-18  Eren Turkay <erenturkay@xfce.org>
- 
-    * tr.po: Updated the Turkish translation.
+
+	* tr.po: Updated the Turkish translation.
 
 2007-03-16 Piarres Beobide <pi@beobide.net>
 
@@ -29,8 +33,8 @@
 2007-02-09  Mohamed Magdy <mohamed.m.k@gmail.com>
 
 	* ar.po: initial commit.
-    *LINGUAS: adding ar language code
-	
+	* LINGUAS: adding ar language code
+
 2007-02-07  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* fr.po: Fixed accelerators.
@@ -77,7 +81,7 @@
 
 2006-12-23  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
-    * ca.po: little updated to Catalan translation
+	* ca.po: little updated to Catalan translation
 
 2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
@@ -86,16 +90,15 @@
 
 2006-12-19  Nick Schermer <nick@xfce.org>
 
-    * POTFILES.in: Removed the testplugin
-    * xfce4-panel.pot, *.po: Remove the testplugin strings
+	* POTFILES.in: Removed the testplugin
+	* xfce4-panel.pot, *.po: Remove the testplugin strings
 
 2006-12-15  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
-    * ca.po: Updated Catalan translation
-      by Carles Muñoz Gorriz <carlesmu@ya.com>
-
-    * cs.po: Updated Czech translations
-      by Michal Varady <miko.vaji@gmail.com>
+	* ca.po: Updated Catalan translation
+	by Carles Muñoz Gorriz <carlesmu@ya.com>
+	* cs.po: Updated Czech translations
+	by Michal Varady <miko.vaji@gmail.com>
 
 2006-12-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
@@ -117,7 +120,7 @@
 
 	* ko.po: Updated Korean ByungHyun Choi
 	<byunghyun.choi@gmail.com>
-	
+
 2006-09-27  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
 	* zh_TW.po: Updated traditional Chinese translations for correcting
@@ -132,7 +135,7 @@
 
 2006-09-22  Sylvain Vedrenne <gnu_sylvain@xfce.org>
 
-	* eo.po: Updated Esperanto translations, by Jarbas Araujo 
+	* eo.po: Updated Esperanto translations, by Jarbas Araujo
 	<jarbasaraujojr@yahoo.com.br>.
 
 2006-09-20  Pau Rul-lan Ferragut <paurullan@bulma.net>
@@ -155,7 +158,7 @@
 2006-08-26  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translations
-	
+
 2006-08-19  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
@@ -215,7 +218,7 @@
 
 2006-06-12  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
-	* zh_TW.po: Update traditional Chinese translations. 
+	* zh_TW.po: Update traditional Chinese translations.
 
 2006-06-10  Daichi Kawahata <daichi@xfce.org>
 
