Removed executable attribute.
(Old svn revision: 25287)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-25  Daichi Kawahata <daichi@xfce.org>
+
+	* mk.po: Removed executable attribute.
+
 2007-03-25  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
 	* en_GB.po: Added the British English translation
@@ -9,7 +13,7 @@
 	* fi.po: Updated Finnish translation.
 
 2007-03-18  Eren Turkay <erenturkay@xfce.org>
- 
+
 	* tr.po: Updated the Turkish translation.
 
 2007-03-03  Maxim Dziumanenko <dziumanenko@gmail.com>
@@ -62,7 +66,7 @@
 
 2006-12-23  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
-    * ca.po: little updated to Catalan translation
+	* ca.po: little updated to Catalan translation
 
 2006-12-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
@@ -71,16 +75,15 @@
 
 2006-12-19  Nick Schermer <nick@xfce.org>
 
-    * POTFILES.in: Removed the testplugin
-    * xfce4-panel.pot, *.po: Remove the testplugin strings
+	* POTFILES.in: Removed the testplugin
+	* xfce4-panel.pot, *.po: Remove the testplugin strings
 
 2006-12-15  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
-    * ca.po: Updated Catalan translation
-      by Carles Muñoz Gorriz <carlesmu@ya.com>
-
-    * cs.po: Updated Czech translations
-      by Michal Varady <miko.vaji@gmail.com>
+	* ca.po: Updated Catalan translation
+	by Carles Muñoz Gorriz <carlesmu@ya.com>
+	* cs.po: Updated Czech translations
+	by Michal Varady <miko.vaji@gmail.com>
 
 2006-12-11  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
@@ -102,7 +105,7 @@
 
 	* ko.po: Updated Korean ByungHyun Choi
 	<byunghyun.choi@gmail.com>
-	
+
 2006-09-27  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
 	* zh_TW.po: Updated traditional Chinese translations for correcting
@@ -140,7 +143,7 @@
 2006-08-26  Stavros Giannouris <stavrosg@serverhive.com>
 
 	* el.po: Updated Greek translations
-	
+
 2006-08-19  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
