--- a/po/gl.po
+++ b/po/gl.po
@@ -1,9 +1,8 @@
 # Galician translation for xfce4-panel
 # Copyright (c) (c) 2006 Canonical Ltd, and Rosetta Contributors 2006
 # This file is distributed under the same license as the xfce4-panel package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2006.
+# Ricardo Domínguez Rouco <riklaren@gmail.com>, 2006.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
