--- a/po/ja.po
+++ b/po/ja.po
@@ -1,16 +1,16 @@
 # $Id$
 #
 # Japanese translations for xfce4-panel package.
-# Copyright (C) 2002-2006 The Xfce development team.
+# Copyright (C) 2002-2007 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Daichi Kawahata <daichi@xfce.org>, 2005-2006.
+# Daichi Kawahata <daichi@xfce.org>, 2005-2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-19 19:30+0100\n"
-"PO-Revision-Date: 2006-05-31 21:43+0900\n"
+"PO-Revision-Date: 2007-03-26 03:12+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -18,39 +18,36 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "コマンド"
+msgstr "コマンドプロンプト"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "X ターミナル・エミュレーター"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "テキストファイルを編集します。"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "エディター"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "ファイル管理"
+msgstr "ファイルマネージャー"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "ファイルとフォルダーを管理します。"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "インターネットサーフィンします。"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "ヘルプブラウザー"
+msgstr "ウェブブラウザー"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -104,12 +101,12 @@ msgstr "パネルの設定"
 
 #: ../panel/panel.c:708
 msgid "Add Items"
-msgstr "アイテムの追加"
+msgstr "アイテムを追加"
 
 #: ../panel/panel.c:724 ../plugins/actions/actions.c:280
 #: ../plugins/actions/actions.c:314 ../plugins/actions/actions.c:429
 msgid "Quit"
-msgstr "終了"
+msgstr "ログアウト"
 
 #: ../panel/panel.c:734
 msgid "Restart"
@@ -403,9 +400,8 @@ msgid "Only show minimized applications"
 msgstr "最小化したアプリのみ表示する"
 
 #: ../plugins/iconbox/iconbox.c:868
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "全ワークスペースのウィンドウを表示する(_W)"
+msgstr "全ワークスペースのアプリを表示する"
 
 #: ../plugins/iconbox/iconbox.c:876 ../plugins/tasklist/tasklist.c:454
 msgid "Use all available space"
@@ -575,7 +571,7 @@ msgstr "列数:"
 
 #: ../plugins/pager/pager.c:394
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "マウスホイールを使ってワークスペースを切り換える"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -623,7 +619,7 @@ msgstr "最小幅:"
 
 #: ../plugins/tasklist/tasklist.c:463
 msgid "Use flat buttons"
-msgstr ""
+msgstr "ボタンをフラットにする"
 
 #: ../plugins/tasklist/tasklist.c:480
 msgid "Show tasks from _all workspaces"
@@ -737,7 +733,7 @@ msgstr "アクションボタン"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
-msgstr "ログアウトまたは画面をロックします。"
+msgstr "ログアウトしたり画面をロックしたりします。"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
@@ -786,12 +782,3 @@ msgstr "利用可能なウィンドウのリストを表示します。"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 パネルマネージャー"
-
-#~ msgid "Test Plugin"
-#~ msgstr "テストプラグイン"
-
-#~ msgid "This plugin has no purpose"
-#~ msgstr "このプログラムはテスト用です。"
-
-#~ msgid "Size"
-#~ msgstr "大きさ"
