* config/systray-4.rc, config/panels.xml: Show system tray border and increase panel size 	  to 30px, so people can actually see the system tray. 	* panel/panel-properties.c: Allow freely movable panels on the screen edges (bug #3039).
(Old svn revision: 25299)

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ NEWS for xfce4-panel
 4.4.1
 =====
 - Completely hide the right-click menu when kiosk mode is enabled (Bug #2984).
+- Show the system tray border in the default layout and increase the top panel
+  size to 30px, so users can actually see the system tray.
+- Allow freely movable panels on the screen edges (bug #3039).
 
 4.4.0
 =====
