--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-27  Nick Schermer <nick@xfce.org>
+
+	* *.po*: Merge the 3 strings from the actions plugin, no new translations required.
+
 2007-03-25  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
