* de.po: Nico Schümann minor fixes to the Xfce 4.4 German translations
(Old svn revision: 25326)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-28  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* de.po: Minor fixes to the German translation
+	by Nico Schümann <nico@prog.nico22.de>
+
 2007-03-27  Nick Schermer <nick@xfce.org>
 
 	* *.po*: Merge the 3 strings from the actions plugin, no new translations required.
