--- a/po/de.po
+++ b/po/de.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # Moritz Heiber <moe@xfce.org>, 2003-2005.
 # Fabian Nowak <timystery@arcor.de>, 2005-2007.
+# Nico Schümann <nico@prog.nico22.de>, 2007.
 #
 msgid ""
 msgstr ""
@@ -779,7 +780,7 @@ msgstr "Zeige eine Liste der verfügbaren Fenster"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Xfce 4 Leistenverwaltung"
+msgstr "Xfce4-Leistenverwaltung"
 
 #~ msgid "Test Plugin"
 #~ msgstr "Plugin testen"
