* de.po: Nico Schümann minor fixes to the German translations * en_GB.po: Jeff Bailes updated the British English translations for trunk and branches
(Old svn revision: 25327)

--- a/po/de.po
+++ b/po/de.po
@@ -140,61 +140,57 @@ msgstr "Entwickler"
 
 #: ../panel/main.c:60
 msgid "Show this message and exit"
-msgstr ""
+msgstr "Diese Nachricht anzeigen und beenden"
 
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show configuration dialog"
-msgstr "Symbole für Benchrichtigungen anzeigen"
+msgstr "Einstellungsdialog anzeigen"
 
 #: ../panel/main.c:62
 msgid "Save configuration"
-msgstr ""
+msgstr "Einstellungen speichern"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart panels"
-msgstr "Neu starten"
+msgstr "Leisten neu starten"
 
 #: ../panel/main.c:64
 msgid "End the session"
-msgstr ""
+msgstr "Sitzung beenden"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
-msgstr ""
+msgstr "Alle Leisten schließen und beenden"
 
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Add new items"
-msgstr "Neues Objekt hinzufügen"
+msgstr "Neue Objekte hinzufügen"
 
 #: ../panel/main.c:89
-#, fuzzy
 msgid "Failed to open display"
-msgstr "Konnte »%s« nicht ausführen."
+msgstr "Konnte den Bildschirm nicht öffnen"
 
 #: ../panel/main.c:101
 msgid "Copyright (c) 2004-2007"
-msgstr ""
+msgstr "Copyright (C) 2004-2007"
 
 #: ../panel/main.c:102
 msgid "The Xfce development team. All rights reserved."
-msgstr ""
+msgstr "Das Xfce-Entwicklungsteam. Alle Rechte vorbehalten."
 
 #: ../panel/main.c:103
 #, c-format
 msgid "Please report bugs to <%s>."
-msgstr ""
+msgstr "Bitte senden Sie Bugs an <%s>"
 
 #: ../panel/main.c:147
 msgid "xfce4-panel already running"
-msgstr ""
+msgstr "xfce4-panel läuft bereits"
 
 #. restart
 #: ../panel/main.c:158
 msgid "Restarting xfce4-panel..."
-msgstr ""
+msgstr "Starte xfce4-panel neu..."
 
 #: ../panel/panel-dialogs.c:188
 #, c-format
@@ -226,14 +222,12 @@ msgid "Full Width"
 msgstr "Volle Breite"
 
 #: ../panel/panel-dialogs.c:912 ../panel/panel-dialogs.c:1148
-#, fuzzy
 msgid "Normal Height"
-msgstr "Normale Breite"
+msgstr "Normale Höhe"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1149
-#, fuzzy
 msgid "Full Height"
-msgstr "Volle Breite"
+msgstr "Volle Höhe"
 
 #: ../panel/panel-dialogs.c:921 ../panel/panel-dialogs.c:1158
 msgid "Span Monitors"
@@ -320,13 +314,12 @@ msgid "Make active panel opaque"
 msgstr "Die aktive Leiste undurchsichtig machen"
 
 #: ../panel/panel-dialogs.c:1509
-#, fuzzy
 msgid "Popup position:"
-msgstr "Position"
+msgstr "Position des Popups:"
 
 #: ../panel/panel-dialogs.c:1519
 msgid "Automatic"
-msgstr ""
+msgstr "Automatisch"
 
 #: ../panel/panel-dialogs.c:1563 ../panel/panel-dialogs.c:1599
 #: ../panel/panel-dialogs.c:1623
@@ -755,7 +748,7 @@ msgstr "Zeige eine Liste der verfügbaren Fenster"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Xfce 4 Leistenverwaltung"
+msgstr "Xfce4-Leistenverwaltung"
 
 #~ msgid ""
 #~ "\n"
@@ -770,7 +763,7 @@ msgstr "Xfce 4 Leistenverwaltung"
 #~ "\n"
 #~ "Xfce-Leiste %s\n"
 #~ "\n"
-#~ "Teil der Xfce Arbeitsumgebung\n"
+#~ "Teil der Xfce-Arbeitsumgebung\n"
 #~ "http://www.xfce.org\n"
 #~ "\n"
 #~ "Lizensiert unter GNU GPL.\n"
