--- a/po/tr.po
+++ b/po/tr.po
@@ -9,12 +9,12 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 16:30+0200\n"
-"PO-Revision-Date: 2007-03-03 12:11+0200\n"
+"PO-Revision-Date: 2007-03-29 21:35+0300\n"
 "Last-Translator: Eren Türkay <turkay.eren@gmail.com>\n"
 "Language-Team: Turkish <turkce@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: ../config/launcher-7.rc.in.h:1
 msgid "Command Prompt"
@@ -136,60 +136,57 @@ msgstr "Geliştirici"
 
 #: ../panel/main.c:60
 msgid "Show this message and exit"
-msgstr ""
+msgstr "Bu mesajı göster ve çık"
 
 #: ../panel/main.c:61
-#, fuzzy
 msgid "Show configuration dialog"
-msgstr "Uyarı simgelerini göster"
+msgstr "Yapılandırma penceresini göster"
 
 #: ../panel/main.c:62
 msgid "Save configuration"
-msgstr ""
+msgstr "Yapılandırmayı kaydet"
 
 #: ../panel/main.c:63
-#, fuzzy
 msgid "Restart panels"
-msgstr "Yeniden Başlat"
+msgstr "Panelleri yeniden başlat"
 
 #: ../panel/main.c:64
 msgid "End the session"
-msgstr ""
+msgstr "Oturumu kapat"
 
 #: ../panel/main.c:65
 msgid "Close all panels and end the program"
-msgstr ""
+msgstr "Tüm panelleri kapat ve programı sonlandır"
 
 #: ../panel/main.c:66
-#, fuzzy
 msgid "Add new items"
-msgstr "Yeni Nesne Ekle"
+msgstr "Yeni nesneler ekle"
 
 #: ../panel/main.c:89
 msgid "Failed to open display"
-msgstr ""
+msgstr "Görüntü açılamadı"
 
 #: ../panel/main.c:101
 msgid "Copyright (c) 2004-2007"
-msgstr ""
+msgstr "Kopya Hakkı (c) 2004-2007"
 
 #: ../panel/main.c:102
 msgid "The Xfce development team. All rights reserved."
-msgstr ""
+msgstr "Xfce geliştirici takımı. Tüm hakları ayırılmıştır."
 
 #: ../panel/main.c:103
 #, c-format
 msgid "Please report bugs to <%s>."
-msgstr ""
+msgstr "Lütfen hataları <%s> adresine bildirin."
 
 #: ../panel/main.c:147
 msgid "xfce4-panel already running"
-msgstr ""
+msgstr "xfce4-panel zaten çalışıyor"
 
 #. restart
 #: ../panel/main.c:158
 msgid "Restarting xfce4-panel..."
-msgstr ""
+msgstr "Xfce4-panel yeniden başlatılıyor..."
 
 #: ../panel/panel-dialogs.c:188
 #, c-format
@@ -221,12 +218,10 @@ msgid "Full Width"
 msgstr "Tam Genişlik"
 
 #: ../panel/panel-dialogs.c:912 ../panel/panel-dialogs.c:1148
-#, fuzzy
 msgid "Normal Height"
 msgstr "Normal Genişlik"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1149
-#, fuzzy
 msgid "Full Height"
 msgstr "Tam Genişlik"
 
@@ -315,13 +310,12 @@ msgid "Make active panel opaque"
 msgstr "Paneli opak yap"
 
 #: ../panel/panel-dialogs.c:1509
-#, fuzzy
 msgid "Popup position:"
-msgstr "Konum"
+msgstr "Açılır pencere pozisyonu:"
 
 #: ../panel/panel-dialogs.c:1519
 msgid "Automatic"
-msgstr ""
+msgstr "Otomatik"
 
 #: ../panel/panel-dialogs.c:1563 ../panel/panel-dialogs.c:1599
 #: ../panel/panel-dialogs.c:1623
@@ -432,81 +426,75 @@ msgid "New Item"
 msgstr "Yeni Nesne"
 
 #: ../plugins/launcher/launcher-exec.c:487
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch \"%s\""
-msgstr "\"%s\" Çalıştırılamıyor"
+msgstr "\"%s\" çalıştırılamadı"
 
 #: ../plugins/launcher/launcher-dialog.c:577
 msgid "No icon"
-msgstr ""
+msgstr "Simge yok"
 
 #: ../plugins/launcher/launcher-dialog.c:597
-#, fuzzy
 msgid "Select a Directory"
-msgstr "Monitör Seç"
+msgstr "Dizin Seç"
 
 #: ../plugins/launcher/launcher-dialog.c:641
-#, fuzzy
 msgid "Select an Application"
-msgstr "Davranış tipini seçin:"
+msgstr "Uygulama Seç"
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
-msgstr ""
+msgstr "Tüm Dosyalar"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
-msgstr ""
+msgstr "Çalıştırılabilir Dosyalar"
 
 #: ../plugins/launcher/launcher-dialog.c:671
 msgid "Perl Scripts"
-msgstr ""
+msgstr "Perl Betikleri"
 
 #: ../plugins/launcher/launcher-dialog.c:677
 msgid "Python Scripts"
-msgstr ""
+msgstr "Python Betikleri"
 
 #: ../plugins/launcher/launcher-dialog.c:683
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "Ruby Betikleri"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Shell Scripts"
-msgstr ""
+msgstr "Kabuk Betikleri"
 
 #: ../plugins/launcher/launcher-dialog.c:760
 msgid "Unknown"
-msgstr ""
+msgstr "Bilinmeyen"
 
 #. allocate the chooser dialog
 #: ../plugins/launcher/launcher-dialog.c:763
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr ""
+msgstr "\"%s\" için simge seç"
 
 #: ../plugins/launcher/launcher-dialog.c:1101
-#, fuzzy
 msgid "_Name"
-msgstr "İsim"
+msgstr "_İsim"
 
 #: ../plugins/launcher/launcher-dialog.c:1119
-#, fuzzy
 msgid "_Description"
-msgstr "Açıklama"
+msgstr "_Açıklama"
 
 #: ../plugins/launcher/launcher-dialog.c:1138
-#, fuzzy
 msgid "_Icon"
-msgstr "Simge Kutusu"
+msgstr "_Simge"
 
 #: ../plugins/launcher/launcher-dialog.c:1156
-#, fuzzy
 msgid "Co_mmand"
-msgstr "Komut"
+msgstr "Komu_t"
 
 #: ../plugins/launcher/launcher-dialog.c:1183
 msgid "_Working Directory"
-msgstr ""
+msgstr "Ç_alışma Dizini"
 
 #: ../plugins/launcher/launcher-dialog.c:1215
 msgid "Run in _terminal"
@@ -587,9 +575,8 @@ msgid "Use flat buttons"
 msgstr "Düz düğmeleri kullan"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:215
-#, fuzzy
 msgid "Show handle"
-msgstr "Ç_erçeve göster"
+msgstr "Çerçeve göster"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:227
 msgid "Show tasks from _all workspaces"
@@ -696,7 +683,7 @@ msgstr "Çalışma alanları _hareketlerini göster"
 
 #: ../mcs-plugin/plugin.c:39
 msgid "Failed to launch 'xfce4-panel -c'"
-msgstr ""
+msgstr "'xfce4-panel -c' çalıştırılamadı"
 
 #: ../mcs-plugin/plugin.c:57
 msgid "Panel"
